Cleans up slider animation. This required setting the min/max height as a fixed height for the main slider for each device width. This allows animating the height back and forth with out jumping to 0 then out to the new height

--- a/styles/mcgowan.less
+++ b/styles/mcgowan.less
@@ -223,20 +223,35 @@ body {
 .thumbnail {
 	margin-bottom: 30px;
 }
-
+// Slider animations
+@duration: 0.5s;
 #recent-work {
 	background: silver;
+	div.container {
+		.transitionMultiple(@duration ease-in-out min-height 0s,
+							@duration ease-in-out max-height 0s;);
+		min-height: 1763px; max-height: 1763px;
+		@media only screen and (min-width : 768px) { min-height: 919px; max-height: 919px; }
+		@media only screen and (min-width : 992px) { min-height: 467px; max-height: 467px; }
+		@media only screen and (min-width : 1200px) { min-height: 474px; max-height: 474px; }
+		&.slide {
+			.transitionMultiple(@duration ease-in-out min-height @duration,
+							    @duration ease-in-out max-height @duration;);
+			min-height: 0px; max-height: 2000px;
+		}
+	}
 }
 article.row {
-	@duration: 0.5s;
+	
 	position: relative;
-	.transitionMultiple(@duration ease-in max-height @duration * 2.2,
-						0 ease-out width @duration,
-						@duration ease-out opacity @duration * 3,
-						@duration ease-out left @duration * 3;);
-	max-height: 1700px;
+	.transitionMultiple(0s linear max-height @duration,
+						0s linear width @duration,
+						@duration ease-out opacity @duration * 2,
+						@duration ease-out left @duration * 2;);
 	width: 100%;
 	overflow: hidden;
+	left: 0%;
+	max-height: 1700px;
 	> div {
 		float: left;
 	}
@@ -247,8 +262,8 @@ article.row {
 		//width: 0px;
 		.transitionMultiple(@duration ease-in opacity 0s,
 							@duration ease-in left 0s, 
-							@duration ease-out max-height @duration,
-							0s ease-in width @duration;);
+							0s linear max-height @duration,
+							0s linear width @duration;);
 	}
 	&.slide-right {
 		left: 100%;
@@ -257,7 +272,7 @@ article.row {
 		//width: 0px;
 		.transitionMultiple(@duration ease-in opacity 0s,
 							@duration ease-in left 0s, 
-							@duration ease-out max-height @duration,
-							0s ease-in width @duration;);
+							0s linear max-height @duration,
+							0s linear width @duration;);
 	}
 }
